--- a/app.html
+++ b/app.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./src/css/glassfire.css">
 </head>
 
 <body>
@@ -31,9 +32,13 @@
             <div class="spinner-blade"></div>
             <div class="spinner-blade"></div>
         </div>
-        <p id="overlayText" class="fw-semibold position-absolute top-0 start-50 translate-middle mt-5">
+        <p id="overlayText" class="fw-semibold position-absolute top-50 start-50 translate-middle mt-5">
         </p>
     </div>
+
+    <button class="btn btn-primary position-absolute bottom-0 end-0 m-5" id="setDev">
+        <i class="fa-solid fa-cog"></i>
+    </button>
 
     <main id="Dastan"></main>
 
@@ -47,6 +52,7 @@
     <script src="./src/js/core.js"></script>
     <script src="./src/js/glass.js"></script>
     <script src="app.js"></script>
+
 </body>
 
 </html>
